completed desktop design

--- a/index.html
+++ b/index.html
@@ -304,13 +304,33 @@
   <footer>
     <img src="./images/bg-footer-top-desktop.svg" alt="" class="edge">
     <div class="footer-flex">
-      <div class="col">
+      <div class="col col-l">
       <img src="./images/logo.svg" alt="" class="logo">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia 
         vestibulum a, ultrices quis sem.</p>
-        
+        <div class="row">
+        <img src="./images/icon-phone.svg" alt="">
+        <p>Phone: +1-543-123-4567</p>
+        </div>
+        <div class="row">
+          <img src="./images/icon-email.svg" alt="">
+          <p>example@huddle.com</p>
+        </div>
+        <div class="row row-margin">
+          <img src="./images/Facebook.svg" alt="">
+          <img src="./images/Insta.svg" alt="">
+          <img src="./images/post-twitter.svg" alt="">
+        </div>
       </div>
-      <div class="col"></div>
+      <div class="col col-r">
+        <h2>NEWSLETTER</h2>
+        <p>To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never 
+          send you spam or pass on your email address</p>
+          <div class="row">
+            <input type="text">
+            <div class="button">Subscribe</div>
+          </div>
+      </div>
     </div>
   </footer>
   <!-- Try it free
